--- a/core/templates/core/chatbot_ui.html
+++ b/core/templates/core/chatbot_ui.html
@@ -32,7 +32,7 @@
 
                 <div class="card-header">
                     <div class="col-md-12 col-xs-12">
-                        <h3 class="panel-title text-center"> Canatrace Chat Assistance</h3>
+                        <h3 class="panel-title text-center"> Trent Covid Care</h3>
                     </div>
                 </div>
 
