--- a/core/templates/core/chatbot_ui.html
+++ b/core/templates/core/chatbot_ui.html
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-expand-lg shadow">
     <div class="container-fluid">
         <a class="navbar-brand" href="https://canatrace.com/">
-            <img src="{% static 'core/img/TrentLogo.png'%}" alt="Canatrace" width="275" height="65">
+            <img src="{% static 'core/img/TrentLogo.png' %}" alt="Trent Covid Care" width="275" height="65">
         </a>
     </div>
     <div>
