--- a/core/templates/core/chatbot_ui.html
+++ b/core/templates/core/chatbot_ui.html
@@ -18,12 +18,12 @@
             <img src="{% static 'core/img/TrentLogo.png' %}" alt="Trent Covid Care" width="275" height="65">
         </a>
     </div>
-    <div>
-        <select name="language-picker-select" id="language-picker-select" class="form-control form-select" style="width:auto;">
-            <option lang="en" value="EN" selected="selected">English</option>
-            <option lang="fr" value="FR">Français</option>
-        </select>
-    </div>
+<!--    <div>-->
+<!--        <select name="language-picker-select" id="language-picker-select" class="form-control form-select" style="width:auto;">-->
+<!--            <option lang="en" value="EN" selected="selected">English</option>-->
+<!--            <option lang="fr" value="FR">Français</option>-->
+<!--        </select>-->
+<!--    </div>-->
 </nav>
 <div class="container" style="min-height: 100%;">
     <div class="row-fluid">
