--- a/core/templates/core/chatbot_ui.html
+++ b/core/templates/core/chatbot_ui.html
@@ -14,7 +14,7 @@
 <body>
 <nav class="navbar navbar-expand-lg shadow">
     <div class="container-fluid">
-        <a class="navbar-brand" href="https://canatrace.com/">
+        <a class="navbar-brand" href="">
             <img src="{% static 'core/img/TrentLogo.png' %}" alt="Trent Covid Care" width="275" height="65">
         </a>
     </div>
